Software/STM32F401RET6/.metadata/.plugins/org.eclipse.cdt.ui/ProjectTest.build.log
11:33:45 **** Build of configuration Debug for project ProjectTest ****
make all 
MCU sub-family = STM32F401xx
arm-none-eabi-gcc -c -mcpu=cortex-m4 -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard  -DSTM32F401xx -DARM_MATH_CM4 -Iinc -ID:/STMLibrary/STM32F4_Lib/Driver/inc -ID:/STMLibrary/STM32F4_Lib/CMSIS/Device/ST/STM32F4xx/Include -ID:/STMLibrary/STM32F4_Lib/CMSIS/Include -ID:/STMLibrary/STM32F4_Lib/CMSIS/RTOS/Template  -Og -Wall -fdata-sections -ffunction-sections -g -gdwarf-2 -MMD -MP -MF"obj/main.d" -Wa,-a,-ad,-alms=obj/main.lst src/main.c -o obj/main.o
src/main.c: In function 'main':
src/main.c:16:20: error: 'GPIO_OType_PP' undeclared (first use in this function); did you mean 'GPIO_TypeDef'?
  init.GPIO_OType = GPIO_OType_PP;
                    ^~~~~~~~~~~~~
                    GPIO_TypeDef
src/main.c:16:20: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Makefile:164: obj/main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

11:33:46 Build Failed. 2 errors, 0 warnings. (took 330ms)

